@startuml

title __MODEL's Class Diagram__\n

  namespace model {
    abstract class model.Event {
        # delayTime : long
        - eventTime : long
        + Event()
        {abstract} + action()
        + ready()
        + start()
    }
  }
  

  namespace model {
    class model.GreenhouseController {
        - eventList : List<Event>
        + GreenhouseController()
        + addEvent()
        + getEvent()
        + run()
    }
  }
  

  namespace model {
    class model.GreenhouseControls {
        - light : boolean
        - thermostat : String
        - water : boolean
        + GreenhouseControls()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.Bell {
        + Bell()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.LightOff {
        + LightOff()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.LightOn {
        + LightOn()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.Restart {
        - eventList : Event[]
        + Restart()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.Terminate {
        + Terminate()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.ThermostatDay {
        + ThermostatDay()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.ThermostatNight {
        + ThermostatNight()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.WaterOff {
        + WaterOff()
        + action()
        + toString()
    }
  }
  

  namespace model {
    class model.GreenhouseControls.WaterOn {
        + WaterOn()
        + action()
        + toString()
    }
  }
  

  model.GreenhouseController o-- sample.Controller : controller
  model.GreenhouseControls -up-|> model.GreenhouseController
  model.GreenhouseControls o-- sample.Controller : controller
  model.GreenhouseControls +-down- model.GreenhouseControls.Bell
  model.GreenhouseControls +-down- model.GreenhouseControls.LightOff
  model.GreenhouseControls +-down- model.GreenhouseControls.LightOn
  model.GreenhouseControls +-down- model.GreenhouseControls.Restart
  model.GreenhouseControls +-down- model.GreenhouseControls.Terminate
  model.GreenhouseControls +-down- model.GreenhouseControls.ThermostatDay
  model.GreenhouseControls +-down- model.GreenhouseControls.ThermostatNight
  model.GreenhouseControls +-down- model.GreenhouseControls.WaterOff
  model.GreenhouseControls +-down- model.GreenhouseControls.WaterOn
  model.GreenhouseControls.Bell -up-|> model.Event
  model.GreenhouseControls.LightOff -up-|> model.Event
  model.GreenhouseControls.LightOn -up-|> model.Event
  model.GreenhouseControls.Restart -up-|> model.Event
  model.GreenhouseControls.Terminate -up-|> model.Event
  model.GreenhouseControls.ThermostatDay -up-|> model.Event
  model.GreenhouseControls.ThermostatNight -up-|> model.Event
  model.GreenhouseControls.WaterOff -up-|> model.Event
  model.GreenhouseControls.WaterOn -up-|> model.Event


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
